# factor-q

./: .dockerignore  .gitignore  .markdownlint.jsonc  .nats-checksums  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE-1.md  QUICKSTART.md  README.md  SECURITY.md  STATUS.md  VISION.md  crush.md  install.sh  justfile  rust-toolchain.toml
docs/: README.md
experiments/fuse-vfs/impls/fuse-backend-rs/: Cargo.toml  NOTES.md
experiments/fuse-vfs/impls/fuse-backend-rs/src/: main.rs
experiments/fuse-vfs/impls/fuse3/: Cargo.toml  NOTES.md
experiments/fuse-vfs/impls/fuse3/src/: main.rs
experiments/fuse-vfs/impls/fuser/: Cargo.toml  NOTES.md
experiments/fuse-vfs/impls/fuser/src/: main.rs
meta/: README.md
services/fq-dashboard/: .gitignore  Cargo.toml  build.rs  justfile
services/fq-dashboard/src/: fixtures.rs  main.rs  render.rs
services/fq-runtime/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.shell-test  README.md  justfile
services/fq-runtime/crates/fq-cli/: Cargo.toml  build.rs
services/fq-runtime/crates/fq-cli/src/: app.rs  args.rs  lib.rs  main.rs  transcript.rs
services/fq-runtime/crates/fq-cli/src/cli/: args.rs  core.rs  daemon.rs  doctor.rs  events.rs  invocation.rs  workers.rs
services/fq-runtime/crates/fq-cli/src/cmd/: core.rs  dead_letters.rs  doctor.rs  events.rs  invocation.rs  project.rs  status.rs  trigger.rs  views.rs  workers.rs
services/fq-runtime/crates/fq-cli/src/daemon/: mod.rs
services/fq-runtime/crates/fq-cli/src/templates/: README.md  docker-compose.yml  fq.toml
services/fq-runtime/crates/fq-cli/tests/: daemon_shutdown.rs  edge_client_cli.rs  edge_wiring.rs  fqd_smoke.rs  golden.rs  golden_commands.rs  invocation_resume.rs  sigpipe.rs  sigterm_shutdown.rs  smoke.rs  store_open_gate.rs
services/fq-runtime/crates/fq-cli/tests/golden/: costs_human.golden  costs_json.golden  dead_letters_list_human.golden  dead_letters_list_json.golden  dead_letters_requeue_human.golden  dead_letters_requeue_json.golden  doctor_human.golden  doctor_json.golden  down_human.golden  down_now_human.golden  events_query_human.golden  events_query_json.golden  invocation_drop_human.golden  invocation_drop_json.golden  invocation_list_human.golden  invocation_list_json.golden  invocation_show_human.golden  invocation_show_json.golden  reload_human.golden  status_human.golden  status_json.golden  transcript_full_human.golden  transcript_json.golden  trigger_via_nats_human.golden  workers_list_human.golden  workers_list_json.golden  workers_prune_dry_run_human.golden  workers_prune_empty_human.golden  workers_prune_human.golden  workers_show_human.golden  workers_show_json.golden
services/fq-runtime/crates/fq-dashboard/: Cargo.toml
services/fq-runtime/crates/fq-dashboard/src/: fixtures.rs  main.rs  render.rs
services/fq-runtime/crates/fq-edge/: Cargo.toml
services/fq-runtime/crates/fq-edge/src/: auth.rs  client.rs  lib.rs  registry.rs  server.rs  service.rs  testing.rs  wire.rs
services/fq-runtime/crates/fq-edge/tests/: attenuation.rs  edge.rs  identity_persistence.rs  preamble_timeout.rs  tls_pinning.rs
services/fq-runtime/crates/fq-ops/: Cargo.toml
services/fq-runtime/crates/fq-ops/src/: catalogue.rs  declared.rs  domain.rs  fixtures.rs  lib.rs  meta.rs  model.rs  name.rs  operation.rs  opid.rs  registry.rs  wire.rs
services/fq-runtime/crates/fq-ops/tests/: forbidden_dependency_gate.rs  grammar.rs  leaf_gate.rs  naming.rs  registry.rs  typed_ids.rs  verb_encoding.rs
services/fq-runtime/crates/fq-ops/tests/snapshots/: exemplar_registry.json  op_names.txt
services/fq-runtime/crates/fq-runtime/: Cargo.toml
services/fq-runtime/crates/fq-runtime/proptest-regressions/test_support/: sim.txt
services/fq-runtime/crates/fq-runtime/proptest-regressions/worker/reducer/: harness.txt
services/fq-runtime/crates/fq-runtime/src/: agent.rs  bus.rs  config.rs  db.rs  dispatcher.rs  events.rs  executor.rs  health.rs  introspection.rs  lib.rs  llm.rs  mcp.rs  policy.rs  pricing.rs  prompt.rs  read_service.rs  tools.rs  transcript.rs  validation.rs  views.rs  watcher.rs  watermark.rs
services/fq-runtime/crates/fq-runtime/src/agent/: definition.rs  registry.rs
services/fq-runtime/crates/fq-runtime/src/control_plane/: advisory_watch.rs  coordination_consumer.rs  dispatcher.rs  durable_consumer.rs  heartbeat_consumer.rs  mod.rs  operator.rs  retention.rs  store.rs  summary_consumer.rs
services/fq-runtime/crates/fq-runtime/src/control_plane/projection/: consumer.rs  mod.rs  store.rs
services/fq-runtime/crates/fq-runtime/src/llm/: fixture.rs  genai.rs
services/fq-runtime/crates/fq-runtime/src/projection/: consumer.rs  store.rs
services/fq-runtime/crates/fq-runtime/src/reducer/: harness.rs  runner.rs  types.rs
services/fq-runtime/crates/fq-runtime/src/test_support/: events.rs  mock_anthropic.rs  mod.rs  nats.rs  oracle.rs  runtime.rs  sim.rs  stepper.rs
services/fq-runtime/crates/fq-runtime/src/worker/: archive_ack.rs  archive_retry.rs  drain.rs  executor.rs  heartbeat.rs  id.rs  introspection.rs  mod.rs  recovery.rs  store.rs  workspace.rs
services/fq-runtime/crates/fq-runtime/tests/: mcp_integration.rs  watermark_read_your_writes.rs
services/fq-runtime/crates/fq-tools/: Cargo.toml
services/fq-runtime/crates/fq-tools/src/: lib.rs  sandbox.rs  tool.rs
services/fq-runtime/crates/fq-tools/src/builtin/: discovery.rs  exec.rs  file_read.rs  file_write.rs  mod.rs  report_outcome.rs  self_inspect.rs  shell.rs
services/fq-store/: .gitignore  Cargo.toml  README.md  justfile
services/fq-store/benches/: throughput.rs
services/fq-store/src/: audit.rs  catalog.rs  cid.rs  cli.rs  collector.rs  conformance.rs  error.rs  fs.rs  gate.rs  grant_log.rs  grants.rs  index.rs  lib.rs  repository.rs  service.rs  stats.rs  test_support.rs  tokens.rs  verify.rs
services/fq-store/tests/: cli.rs  concurrency.rs  filesystem.proptest-regressions  filesystem.rs  gc_exhaustive.rs  gc_interleaving.rs  grant_bus.rs  grants_sim.rs  remote.rs  sim.rs
services/fq-test-support/: Cargo.toml
services/fq-test-support/src/: lib.rs
(+267 files in other folders)
