# The single workspace for every Rust crate in the repo (#194): one
# dependency resolution, one Cargo.lock, one target/. This retires the
# per-service lockfiles and the LOCKSTEP hand-sync that kept their
# transitive pins aligned (formerly in services/fq-dashboard/Cargo.toml).
# Separate binaries, crash domains, and the tarpc/wire seams are
# unaffected — membership here changes builds, not architecture.
[workspace]
resolver = "2"
members = [
    "services/fq-dashboard",
    "services/fq-runtime/crates/fq-cli",
    "services/fq-runtime/crates/fq-edge",
    "services/fq-runtime/crates/fq-ops",
    "services/fq-runtime/crates/fq-runtime",
    "services/fq-runtime/crates/fq-tools",
    "services/fq-store",
    "services/fq-test-support",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
# Business Source License 1.1 — source-available, converts to Apache-2.0
# four years after each release. See /LICENSE for the parameters.
license = "BUSL-1.1"
description = "factor-q agent runtime"
repository = "https://github.com/bricef/factor-q"

# Workspace-wide lint policy. Every member opts in via
# `[lints] workspace = true` in its Cargo.toml. The intent: a
# bare `cargo build` / `cargo check` / `cargo clippy` runs
# cleanly with zero warnings, and failures here block commits
# the same way test failures do.
#
# If a specific lint genuinely doesn't fit a code site, use a
# targeted `#[allow(...)]` with a short comment naming the
# reason — treat that as a code smell rather than the default.
[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
# clippy::all covers correctness, suspicious, style, complexity,
# and perf. We don't currently enable pedantic / nursery / cargo
# groups because they trade false-positives for marginal value.
all = "deny"
