# The single workspace for every Rust crate in the repo (#194): one
# dependency resolution, one Cargo.lock, one target/. This retires the
# per-service lockfiles and the LOCKSTEP hand-sync that kept their
# transitive pins aligned (formerly in services/fq-dashboard/Cargo.toml).
# Separate binaries, crash domains, and the tarpc/wire seams are
# unaffected — membership here changes builds, not architecture.
[workspace]
resolver = "2"
members = [
    "services/fq-dashboard",
    "services/fq-runtime/crates/fq-cli",
    "services/fq-runtime/crates/fq-edge",
    "services/fq-runtime/crates/fq-ops",
    "services/fq-runtime/crates/fq-runtime",
    "services/fq-runtime/crates/fq-tools",
    "services/fq-store",
    "services/fq-test-support",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
# Business Source License 1.1 — source-available, converts to Apache-2.0
# four years after each release. See /LICENSE for the parameters.
license = "BUSL-1.1"
description = "factor-q agent runtime"
repository = "https://github.com/bricef/factor-q"

# Shared dependencies, declared once (#194 phase 2). Members opt in with
# `dep = { workspace = true }` and may ADD features on top (features are
# additive); the root carries the version and only the features every
# user wants. Policy: a dependency lives here when two or more member
# manifests use it; single-crate deps stay in their crate's manifest so
# this table reads as the genuinely shared surface.
#
# tokio is version-only on purpose: feature sets are per-crate policy
# (binaries take "full"; library crates carry a trimmed list, with the
# dev-dependency re-adding "full" for their test builds).
[workspace.dependencies]
# -- internal --
fq-ops = { path = "services/fq-runtime/crates/fq-ops" }
fq-runtime = { path = "services/fq-runtime/crates/fq-runtime" }
fq-test-support = { path = "services/fq-test-support" }
fq-tools = { path = "services/fq-runtime/crates/fq-tools" }
# -- external --
anyhow = "1"
async-nats = "0.38"
async-trait = "0.1"
axum = "0.8"
biscuit-auth = "6"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
libc = "0.2"
proptest = "1"
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
strum = { version = "0.27", features = ["derive"] }
tarpc = { version = "0.37", features = [
    "tokio1",
    "serde1",
    "serde-transport",
    "serde-transport-bincode",
    "tcp",
] }
tempfile = "3"
thiserror = "2"
tokio = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }

# Workspace-wide lint policy. Every member opts in via
# `[lints] workspace = true` in its Cargo.toml. The intent: a
# bare `cargo build` / `cargo check` / `cargo clippy` runs
# cleanly with zero warnings, and failures here block commits
# the same way test failures do.
#
# If a specific lint genuinely doesn't fit a code site, use a
# targeted `#[allow(...)]` with a short comment naming the
# reason — treat that as a code smell rather than the default.
[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
# clippy::all covers correctness, suspicious, style, complexity,
# and perf. We don't currently enable pedantic / nursery / cargo
# groups because they trade false-positives for marginal value.
all = "deny"
