[package]
name = "fq-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "factor-q operator dashboard — a read-only web surface over the running daemon"
repository.workspace = true

[[bin]]
name = "fq-dashboard"
path = "src/main.rs"

[dependencies]
# The typed contract: the wire client and the view DTOs come straight
# from the runtime — a trait change fails this compile instead of
# drifting silently (#105 layer 3). Shared transitive deps resolve under
# the single workspace Cargo.lock (#194), so runtime and dashboard can
# never disagree on a pin.
fq-runtime = { workspace = true, features = ["read-service"] }
anyhow = { workspace = true }
axum = { workspace = true }
# RFC3339 `since` strings for the costs page's time windows — the same
# form the projection stores (envelope timestamp .to_rfc3339()), so the
# store's lexicographic `timestamp >= ?` compare works. Already in the
# tree via fq-runtime.
chrono = { workspace = true }
clap = { workspace = true }
# Server-side builders for the datastar SSE protocol (the client is
# vendored at assets/datastar.js — v1.0.0, MIT, served from the binary).
datastar = { version = "0.3", features = ["axum"] }
futures = { workspace = true }
# Decodes the transcript wire payload (canonical JSON — see
# ReadService::transcript) and pretty-prints tool parameters.
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
async-nats = { workspace = true }
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

# The house zero-warnings policy, from the workspace root.
[lints]
workspace = true
