[package]
name = "fq-store"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "factor-q content-addressed storage + semantic index service"
repository = "https://github.com/bricef/factor-q"

[dependencies]
async-nats = { version = "0.38", optional = true }
async-trait = "0.1"
biscuit-auth = "6"
blake3 = "1"
clap = { version = "4", features = ["derive", "env"], optional = true }
# Named, individually-failable protocol-step seams (`fail_point!`). Compiles to
# nothing unless the `failpoints` feature is on — production is zero-cost; tests
# and the interleaving checker turn it on to schedule and fault-inject each step.
# See docs/design/committed/storage-concurrency-verification.md.
fail = "0.5"
fastcdc = "3"
futures = { version = "0.3", optional = true }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tarpc = { version = "0.37", features = [
    "tokio1",
    "serde1",
    "serde-transport",
    "serde-transport-bincode",
    "tcp",
], optional = true }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "rt", "rt-multi-thread", "macros", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
# The CAS network service: the tarpc server (`serve`) and the RemoteStore
# client. Optional so in-process library consumers don't pull tarpc.
service = ["dep:tarpc", "dep:futures"]
# The `fq-cas` command-line tool. Pulls in the service for serve/--server.
# Optional so library consumers don't pull clap.
cli = ["dep:clap", "service", "dep:tracing-subscriber"]
# The NATS-backed grant-event bus (M2). Optional so the store stays hermetic
# for library consumers and tests; only the fan-out feed needs a broker.
bus = ["dep:async-nats"]
# Activate the protocol-step seams (`fail_point!`). Off in production (the seams
# compile to nothing); on for the interleaving tests and the exhaustive checker.
failpoints = ["fail/failpoints"]

[[bin]]
name = "fq-cas"
path = "src/bin/fq-cas.rs"
required-features = ["cli"]

# cargo-binstall: fetch the pre-built fq-cas binary from GitHub Releases.
# Must match the release artifact naming (scripts/package.sh, release.yml).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/factor-q-{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "fq-cas"

[dev-dependencies]
criterion = "0.5"
futures = "0.3"
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "throughput"
harness = false

# Mirror the fq-runtime workspace lint policy: a clean build has zero
# warnings, and that is enforced.
[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
