[package]
name = "fq-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "factor-q content-addressed storage + semantic index service"
repository.workspace = true

[dependencies]
async-nats = { workspace = true, optional = true }
async-trait = { workspace = true }
biscuit-auth = { workspace = true }
blake3 = "1"
clap = { workspace = true, optional = true }
# Named, individually-failable protocol-step seams (`fail_point!`). Compiles to
# nothing unless the `failpoints` feature is on — production is zero-cost; tests
# and the interleaving checker turn it on to schedule and fault-inject each step.
# See docs/design/committed/storage-concurrency-verification.md.
fail = "0.5"
fastcdc = "3"
futures = { workspace = true, optional = true }
hex = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tarpc = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt", "rt-multi-thread", "macros", "net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
# The CAS network service: the tarpc server (`serve`) and the RemoteStore
# client. Optional so in-process library consumers don't pull tarpc.
service = ["dep:tarpc", "dep:futures"]
# The `fq-cas` command-line tool. Pulls in the service for serve/--server.
# Optional so library consumers don't pull clap.
cli = ["dep:clap", "service", "dep:tracing-subscriber"]
# The NATS-backed grant-event bus (M2). Optional so the store stays hermetic
# for library consumers and tests; only the fan-out feed needs a broker.
bus = ["dep:async-nats"]
# Activate the protocol-step seams (`fail_point!`). Off in production (the seams
# compile to nothing); on for the interleaving tests and the exhaustive checker.
failpoints = ["fail/failpoints"]

[[bin]]
name = "fq-cas"
path = "src/bin/fq-cas.rs"
required-features = ["cli"]

# cargo-binstall: fetch the pre-built fq-cas binary from GitHub Releases.
# Must match the release artifact naming (scripts/package.sh, release.yml).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/factor-q-{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "fq-cas"

[dev-dependencies]
criterion = "0.5"
# The shared private-broker guard, for the grant_bus integration test (#233).
fq-test-support = { workspace = true }
futures = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bench]]
name = "throughput"
harness = false

# The house zero-warnings policy, from the workspace root.
[lints]
workspace = true
