# Shared test-only helpers usable across factor-q's services (fq-runtime,
# fq-store, …) — service crates cannot share a `#[cfg(test)]` module, so the
# cross-cutting guards live here and each consumer dev-depends on this crate
# (#233).
[package]
name = "fq-test-support"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "Test-only helpers shared across factor-q's workspaces"
repository = "https://github.com/bricef/factor-q"
publish = false

[dependencies]
serde_json = "1"
tokio = { version = "1", features = ["process"] }

[target.'cfg(unix)'.dependencies]
# Process groups are Unix-wide; PR_SET_PDEATHSIG remains Linux-gated in code.
libc = "0.2"

[dev-dependencies]
# The crate's own tests exercise the guard against a real broker.
async-nats = "0.38"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

# The house zero-warnings policy, from the workspace root.
[lints]
workspace = true
