# Shared test-only helpers usable across factor-q's services (fq-runtime,
# fq-store, …) — service crates cannot share a `#[cfg(test)]` module, so the
# cross-cutting guards live here and each consumer dev-depends on this crate
# (#233).
[package]
name = "fq-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test-only helpers shared across factor-q's services"
repository.workspace = true
publish = false

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process"] }

[target.'cfg(unix)'.dependencies]
# Process groups are Unix-wide; PR_SET_PDEATHSIG remains Linux-gated in code.
libc = { workspace = true }

[dev-dependencies]
# The crate's own tests exercise the guard against a real broker.
async-nats = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# The house zero-warnings policy, from the workspace root.
[lints]
workspace = true
