[package]
name = "fq-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "fq_cli"
path = "src/lib.rs"

[[bin]]
name = "fq"
path = "src/bin/fq.rs"

# The daemon's own binary, born with the Phase-2 edge as its named
# home. Shares every line of daemon code with `fq run` (a
# compatibility alias until the ADR-0031 Phase-5 split strips `run`
# and slims `fq` to the thin client).
[[bin]]
name = "fqd"
path = "src/bin/fqd.rs"

# cargo-binstall: fetch the pre-built `fq` binary from GitHub Releases
# instead of compiling. Must match the release artifact naming (see
# scripts/package.sh and .github/workflows/release.yml).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/factor-q-{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "fq"

[dependencies]
# read-service: the daemon hosts the read-only tarpc surface (#105
# layer 2); whether the listener starts is `[read_service]` in fq.toml.
fq-runtime = { path = "../fq-runtime", features = ["read-service"] }
fq-tools = { path = "../fq-tools" }
anyhow = "1"
async-nats = "0.38"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v7"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# The shared private-broker guard, for the daemon_shutdown integration
# tests (#233).
fq-test-support = { path = "../../../fq-test-support" }
libc = "0.2"
tempfile = "3"

[lints]
workspace = true
