[package]
name = "fq-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "fq_cli"
path = "src/lib.rs"

[[bin]]
name = "fq"
path = "src/bin/fq.rs"

# The daemon's own binary, born with the Phase-2 edge as its named
# home. Shares every line of daemon code with `fq run` (a
# compatibility alias until the ADR-0031 Phase-5 split strips `run`
# and slims `fq` to the thin client).
[[bin]]
name = "fqd"
path = "src/bin/fqd.rs"

# cargo-binstall: fetch the pre-built `fq` binary from GitHub Releases
# instead of compiling. Must match the release artifact naming (see
# scripts/package.sh and .github/workflows/release.yml).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/factor-q-{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "fq"

[dependencies]
# read-service: the daemon hosts the read-only tarpc surface (#105
# layer 2); whether the listener starts is `[read_service]` in fq.toml.
fq-runtime = { workspace = true, features = ["read-service"] }
fq-tools = { workspace = true }
anyhow = { workspace = true }
async-nats = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# "full" is deliberate: this is the daemon/CLI binary crate, not a
# library — no consumer inherits the feature set (#194 phase 2).
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
# The shared private-broker guard, for the daemon_shutdown integration
# tests (#233).
fq-test-support = { workspace = true }
libc = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
