[package]
name = "fq-edge"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

# The authenticated generic edge (ADR-0031 as amended by its Appendix A):
# the tarpc service trait, the generic invoke/next_batch envelopes, the
# wire-error vocabulary, identity provisioning (cert + root keypair +
# tokens), and the client with TLS pinning and token presentation. The
# transport half of the wire crate — fq-ops stays the transport-free
# contract half. No sqlx, no NATS: the thin `fq` of the split links
# fq-edge -> fq-ops alone. (Client/server feature split can come with
# Phase 5 if binary size warrants it.)

[dependencies]
fq-ops = { workspace = true }
anyhow = { workspace = true }
biscuit-auth = { workspace = true }
futures = { workspace = true }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
# serde-transport-json on top of the workspace baseline: the preamble
# rides JSON before the bincode session starts.
tarpc = { workspace = true, features = ["serde-transport-json"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "rt", "macros", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
schemars = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
