[package]
name = "fq-ops"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

# The operation-registry contract crate (ADR-0006) and the sqlx-free
# wire crate ADR-0031 calls for. A LEAF by design: no sqlx, no NATS,
# no tokio, no tarpc — `fq` the thin client will depend on this crate
# alone, so anything heavier added here leaks into the client binary.
# tests/forbidden_dependency_gate.rs enforces the list.

[dependencies]
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"

[lints]
workspace = true
