[package]
name = "fq-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
fq-tools = { path = "../fq-tools" }
async-nats = "0.38"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bytes = "1"
toml = "0.8"
walkdir = "2"
async-trait = "0.1"
genai = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.7", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
axum = "0.7"
# Integration tests construct rmcp wire types (e.g. a canned
# `CreateMessageResult` to reply to a bridged sampling request); the
# `server` + `transport-async-rw` features let unit tests serve an
# in-process mock MCP server over a duplex (D1: pagination / mutation).
rmcp = { version = "1.7", default-features = false, features = ["client", "server", "transport-child-process", "transport-async-rw"] }

[lints]
workspace = true
