[package]
name = "fq-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
fq-tools = { path = "../fq-tools" }
async-nats = "0.38"
url = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bytes = "1"
toml = "0.8"
walkdir = "2"
async-trait = "0.1"
genai = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.7", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
strum = { version = "0.27", features = ["derive"] }
# The read-only operator service (#105 layer 2). Optional so library
# consumers don't pull tarpc — same shape as fq-store's `service` feature.
tarpc = { version = "0.37", features = [
    "tokio1",
    "serde1",
    "serde-transport",
    "serde-transport-bincode",
    "tcp",
], optional = true }

[features]
# The in-daemon read-only tarpc service (wire-mirror of `views` plus the
# JetStream health probe). `fq-cli` enables it; whether the *listener*
# starts is a runtime decision (`[read_service]` in fq.toml).
read-service = ["dep:tarpc"]
# Exposes `test_support::nats` (the private-broker guard) to integration
# tests in this and dependent crates, which cannot see `cfg(test)` items
# (#233). Only the dependency-free broker guard — never the dev-dep helpers.
test-support = []

[dev-dependencies]
# Self-reference with the test-support feature so this crate's own
# integration tests (tests/*.rs) can use `test_support::nats` — the standard
# cargo idiom for exposing a feature-gated helper to integration tests (#233).
fq-runtime = { path = ".", features = ["test-support"] }
proptest = "1"
tempfile = "3"
axum = "0.7"
# Integration tests construct rmcp wire types (e.g. a canned
# `CreateMessageResult` to reply to a bridged sampling request); the
# `server` + `transport-async-rw` features let unit tests serve an
# in-process mock MCP server over a duplex (D1: pagination / mutation).
rmcp = { version = "1.7", default-features = false, features = ["client", "server", "transport-child-process", "transport-async-rw"] }

[lints]
workspace = true
